# Computer-Networking-Project

./: .gitignore  CMakeLists.txt  Readme.md  apps.txt  outputTokenFilePath  run.ps1  setup_and_build.ps1  test.ps1
.github/workflows/: compile-and-release.yml
Client/: ClientSocket.cpp  ClientSocket.hpp  client.cpp
GmailAPI/: Base64.cpp  Base64.hpp  GmailAPI.cpp  GmailAPI.hpp  HTMLGenerator.cpp  HTMLGenerator.hpp  OAuthManager.cpp  OAuthManager.hpp  User.hpp  message-list.txt  new_access_token.txt  script-auto.ps1  script.ps1  temp.cpp
GmailAPI/scripts/: script-auto.ps1  script.ps1
Server/: ServerSocket.cpp  ServerSocket.hpp  server.cpp
Tests/: main.cpp  test_GmailAPI.cpp  test_base64.cpp  test_main.cpp  winAPI_test.cpp
WindowAPI/: CopyDeleteFile.cpp  FileOperations.cpp  FileOperations.hpp  KeyboardDisabler.cpp  KeyboardDisabler.hpp  Keylogger.cpp  Keylogger.hpp  MyUtility.cpp  MyUtility.hpp  ProcessOperations.cpp  ProcessOperations.hpp  SystemOperations.cpp  SystemOperations.hpp  VideoRecorder.cpp  VideoRecorder.hpp  winAPI.cpp  winAPI.hpp
installer/: RemoteDesktopWithEmailServiceInstaller.iss
